# matrix-nio-mcp

./: .env.example  .gitignore  Containerfile  README.md  SPEC.md  config.toml.example  flake.nix  justfile  pyproject.toml
.github/workflows/: container.yml  test.yml
src/matrix_nio_mcp/: __init__.py  config.py  errors.py  log.py  schemas.py  server.py  session.py
src/matrix_nio_mcp/tools/: __init__.py  media.py  members.py  messages.py  profile.py  rooms.py  spaces.py
tests/integration/: conftest.py  docker-compose.yml  synapse.yaml  test_messages.py  test_rooms.py
tests/unit/: test_config.py  test_errors.py  test_schemas.py
